[bug] fix quick nav misalignment

--- a/src/sass/modules/_edit.scss
+++ b/src/sass/modules/_edit.scss
@@ -237,7 +237,7 @@
 .m-edit-box-body-item-margin-small {
   [class*="m-edit-box-item"],
   [class^="m-edit-box-item"] {
-    margin-bottom: 0.2em;
+    margin-bottom: 4px;
   }
 }
 [class*="m-edit-box-label"],
